gitignore update from LY

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,4 @@ _python_client/доки от Федора
 _python_client/examples
 _python_client/pybluez_test
 _python_client/expansion.code-workspace
+_python_client/LY_Expansion.code-workspace
