v.0.1.1 colored units_widget and serial timeouts

--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,8 @@ _python_client/logs/
 этапы разработки.docx
 заметки.txt
 _python_client/_ЗАМЕТКИ.txt
+_python_client/mainwindow.ui.autosave
+.qt_for_python/uic/mainwindow с 15ю кастомными виджетами.py
+.qt_for_python/uic/mainwindow.py
+.qt_for_python/uic/mainwindow.py
+.qt_for_python/uic/mainwindow.py
